Improved "get last sequence" query